--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,17 @@
     <link rel="icon" href="<%= BASE_URL %>favicon-120x120.png" sizes="120x120" type="image/png">
     <link rel="icon" href="<%= BASE_URL %>favicon-192x192.png" sizes="192x192" type="image/png">
     <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico" type="image/x-icon">
+
+    <!-- iOS icons -->
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-57x57.png" sizes="57x57">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-60x60.png" sizes="60x60">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-72x72.png" sizes="72x72">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-76x76.png" sizes="76x76">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-114x114.png" sizes="114x114">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-120x120.png" sizes="120x120">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-144x144.png" sizes="144x144">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-152x152.png" sizes="152x152">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-180x180.png" sizes="180x180">
   </head>
   <body>
     <noscript>
