--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Mod3D</title>
+<head>
+  <title>Mod3D</title>
 
-    <!-- Common -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="robots" content="index, follow">
-    <meta name="description" content="🎨 A simple 3D editor, that allows you to wrap a 3D model into a texture. As a texture there could be used UV mappings, images or figures.">
+  <!-- Common -->
+  <meta charset="utf-8">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width,initial-scale=1.0" name="viewport">
+  <meta content="index, follow" name="robots">
+  <meta content="🎨 A simple 3D editor, that allows you to wrap a 3D model into a texture. As a texture there could be used UV mappings, images or figures."
+        name="description">
 
-    <!-- Favicon --->
-    <link rel="icon" href="<%= BASE_URL %>favicon.svg" sizes="any" type="image/svg+xml">
-    <link rel="icon" href="<%= BASE_URL %>favicon-16x16.png" sizes="16x16" type="image/png">
-    <link rel="icon" href="<%= BASE_URL %>favicon-32x32.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="<%= BASE_URL %>favicon-96x96.png" sizes="96x96" type="image/png">
-    <link rel="icon" href="<%= BASE_URL %>favicon-120x120.png" sizes="120x120" type="image/png">
-    <link rel="icon" href="<%= BASE_URL %>favicon-192x192.png" sizes="192x192" type="image/png">
-    <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico" type="image/x-icon">
+  <!-- Favicon --->
+  <link href="<%= BASE_URL %>favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
+  <link href="<%= BASE_URL %>favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+  <link href="<%= BASE_URL %>favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+  <link href="<%= BASE_URL %>favicon-96x96.png" rel="icon" sizes="96x96" type="image/png">
+  <link href="<%= BASE_URL %>favicon-120x120.png" rel="icon" sizes="120x120" type="image/png">
+  <link href="<%= BASE_URL %>favicon-192x192.png" rel="icon" sizes="192x192" type="image/png">
+  <link href="<%= BASE_URL %>favicon.ico" rel="shortcut icon" type="image/x-icon">
 
-    <!-- iOS icons -->
-    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-57x57.png" sizes="57x57">
-    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-60x60.png" sizes="60x60">
-    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-72x72.png" sizes="72x72">
-    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-76x76.png" sizes="76x76">
-    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-114x114.png" sizes="114x114">
-    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-120x120.png" sizes="120x120">
-    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-144x144.png" sizes="144x144">
-    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-152x152.png" sizes="152x152">
-    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon-180x180.png" sizes="180x180">
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but Mod3D doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-  </body>
+  <!-- iOS -->
+  <link href="<%= BASE_URL %>apple-touch-icon-57x57.png" rel="apple-touch-icon" sizes="57x57">
+  <link href="<%= BASE_URL %>apple-touch-icon-60x60.png" rel="apple-touch-icon" sizes="60x60">
+  <link href="<%= BASE_URL %>apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
+  <link href="<%= BASE_URL %>apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
+  <link href="<%= BASE_URL %>apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
+  <link href="<%= BASE_URL %>apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
+  <link href="<%= BASE_URL %>apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144">
+  <link href="<%= BASE_URL %>apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152">
+  <link href="<%= BASE_URL %>apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180">
+
+  <!-- Safari -->
+  <link color="#009688" href="<%= BASE_URL %>safari-pinned-tab.svg" rel="mask-icon"/>
+</head>
+<body>
+<noscript>
+  <strong>We're sorry but Mod3D doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+</noscript>
+<div id="app"></div>
+</body>
 </html>
