feat(public): add browserconfig for Microsoft Edge

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
   <meta content="🎨 A simple 3D editor, that allows you to wrap a 3D model into a texture. As a texture there could be used UV mappings, images or figures."
         name="description">
 
+  <!-- Microsoft Edge -->
+  <meta content="<%= BASE_URL %>browserconfig.xml" name="msapplication-config"/>
+  
   <!-- Favicon --->
   <link href="<%= BASE_URL %>favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
   <link href="<%= BASE_URL %>favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
