feat(pwa): add manifest, theme-color, regular and maskable icons

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,12 @@
   <meta content="🎨 A simple 3D editor, that allows you to wrap a 3D model into a texture. As a texture there could be used UV mappings, images or figures."
         name="description">
 
+  <!-- Progressive web app -->
+  <meta content="#212121" name="theme-color"/>
+
   <!-- Microsoft Edge -->
   <meta content="<%= BASE_URL %>browserconfig.xml" name="msapplication-config"/>
-  
+
   <!-- Favicon --->
   <link href="<%= BASE_URL %>favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
   <link href="<%= BASE_URL %>favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
@@ -22,6 +25,9 @@
   <link href="<%= BASE_URL %>favicon-120x120.png" rel="icon" sizes="120x120" type="image/png">
   <link href="<%= BASE_URL %>favicon-192x192.png" rel="icon" sizes="192x192" type="image/png">
   <link href="<%= BASE_URL %>favicon.ico" rel="shortcut icon" type="image/x-icon">
+
+  <!-- Progressive web app -->
+  <link href="<%= BASE_URL %>manifest.json" rel="manifest">
 
   <!-- iOS -->
   <link href="<%= BASE_URL %>apple-touch-icon-57x57.png" rel="apple-touch-icon" sizes="57x57">
