feat(public): add Open Graph

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,18 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1.0" name="viewport">
   <meta content="index, follow" name="robots">
+  <meta
+    content="🎨 A simple 3D editor, that allows you to wrap a 3D model into a texture. As a texture there could be used UV mappings, images or figures."
+    name="description">
+
+  <!-- Open Graph -->
+  <meta content="Mod3D" property="og:title">
   <meta content="🎨 A simple 3D editor, that allows you to wrap a 3D model into a texture. As a texture there could be used UV mappings, images or figures."
-        name="description">
+        property="og:description">
+  <meta content="website" property="og:type">
+  <meta content="Mod3D" property="og:site_name">
+  <meta content="<%= VUE_APP_ORIGIN %><%= BASE_URL %>" property="og:url">
+  <meta content="<%= VUE_APP_ORIGIN %><%= BASE_URL %>img/og/logo.png" property="og:image">
 
   <!-- Progressive web app -->
   <meta content="#212121" name="theme-color"/>
