feat(public): add Twitter Cards

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <title>Mod3D</title>
 
   <!-- Common -->
-  <meta charset="utf-8">
+  <meta charset="utf-8"/>
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1.0" name="viewport">
   <meta content="index, follow" name="robots">
@@ -14,18 +14,25 @@
 
   <!-- Open Graph -->
   <meta content="Mod3D" property="og:title">
-  <meta content="🎨 A simple 3D editor, that allows you to wrap a 3D model into a texture. As a texture there could be used UV mappings, images or figures."
-        property="og:description">
+  <meta
+    content="🎨 A simple 3D editor, that allows you to wrap a 3D model into a texture. As a texture there could be used UV mappings, images or figures."
+    property="og:description">
   <meta content="website" property="og:type">
   <meta content="Mod3D" property="og:site_name">
   <meta content="<%= VUE_APP_ORIGIN %><%= BASE_URL %>" property="og:url">
   <meta content="<%= VUE_APP_ORIGIN %><%= BASE_URL %>img/og/logo.png" property="og:image">
 
+  <!-- Twitter Cards -->
+  <meta content="summary_large_image" name="twitter:card">
+  <meta content="@EduardMalokhvii" name="twitter:site">
+  <meta content="@EduardMalokhvii" name="twitter:creator">
+  <meta content="<%= VUE_APP_ORIGIN %><%= BASE_URL %>img/twitter/logo.png" name="twitter:image">
+
   <!-- Progressive web app -->
-  <meta content="#212121" name="theme-color"/>
+  <meta content="#212121" name="theme-color">
 
   <!-- Microsoft Edge -->
-  <meta content="<%= BASE_URL %>browserconfig.xml" name="msapplication-config"/>
+  <meta content="<%= BASE_URL %>browserconfig.xml" name="msapplication-config">
 
   <!-- Favicon --->
   <link href="<%= BASE_URL %>favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
@@ -51,7 +58,7 @@
   <link href="<%= BASE_URL %>apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180">
 
   <!-- Safari -->
-  <link color="#009688" href="<%= BASE_URL %>safari-pinned-tab.svg" rel="mask-icon"/>
+  <link color="#009688" href="<%= BASE_URL %>safari-pinned-tab.svg" rel="mask-icon">
 </head>
 <body>
 <noscript>
