--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Mod3D</title>
-
-  <!-- Common -->
   <meta charset="utf-8"/>
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1.0" name="viewport">
+
+  <title>Mod3D</title>
+
+  <!-- Preloader -->
+  <style>body,html{background:#212121;width:100%;height:100%;margin:0;padding:0}#preloader{width:100%;height:100%;display:flex;justify-content:center;align-items:center}.sk-folding-cube{width:40px;height:40px;position:relative;-webkit-transform:rotateZ(45deg);transform:rotateZ(45deg)}.sk-folding-cube .sk-cube{float:left;width:50%;height:50%;position:relative;-webkit-transform:scale(1.1);-ms-transform:scale(1.1);transform:scale(1.1)}.sk-folding-cube .sk-cube:before{content:'';position:absolute;top:0;left:0;width:100%;height:100%;background-color:#009688;-webkit-animation:sk-foldCubeAngle 2.4s infinite linear both;animation:sk-foldCubeAngle 2.4s infinite linear both;-webkit-transform-origin:100% 100%;-ms-transform-origin:100% 100%;transform-origin:100% 100%}.sk-folding-cube .sk-cube2{-webkit-transform:scale(1.1) rotateZ(90deg);transform:scale(1.1) rotateZ(90deg)}.sk-folding-cube .sk-cube3{-webkit-transform:scale(1.1) rotateZ(180deg);transform:scale(1.1) rotateZ(180deg)}.sk-folding-cube .sk-cube4{-webkit-transform:scale(1.1) rotateZ(270deg);transform:scale(1.1) rotateZ(270deg)}.sk-folding-cube .sk-cube2:before{-webkit-animation-delay:.3s;animation-delay:.3s}.sk-folding-cube .sk-cube3:before{-webkit-animation-delay:.6s;animation-delay:.6s}.sk-folding-cube .sk-cube4:before{-webkit-animation-delay:.9s;animation-delay:.9s}@-webkit-keyframes sk-foldCubeAngle{0%,10%{-webkit-transform:perspective(140px) rotateX(-180deg);transform:perspective(140px) rotateX(-180deg);opacity:0}25%,75%{-webkit-transform:perspective(140px) rotateX(0);transform:perspective(140px) rotateX(0);opacity:1}100%,90%{-webkit-transform:perspective(140px) rotateY(180deg);transform:perspective(140px) rotateY(180deg);opacity:0}}@keyframes sk-foldCubeAngle{0%,10%{-webkit-transform:perspective(140px) rotateX(-180deg);transform:perspective(140px) rotateX(-180deg);opacity:0}25%,75%{-webkit-transform:perspective(140px) rotateX(0);transform:perspective(140px) rotateX(0);opacity:1}100%,90%{-webkit-transform:perspective(140px) rotateY(180deg);transform:perspective(140px) rotateY(180deg);opacity:0}}</style>
+
+  <!-- Common -->
   <meta content="index, follow" name="robots">
   <meta
     content="🎨 A simple 3D editor, that allows you to wrap a 3D model into a texture. As a texture there could be used UV mappings, images or figures."
@@ -33,6 +37,9 @@
 
   <!-- Microsoft Edge -->
   <meta content="<%= BASE_URL %>browserconfig.xml" name="msapplication-config">
+
+  <!-- Common -->
+  <link href="<%= VUE_APP_ORIGIN %><%= BASE_URL %>" rel="canonical">
 
   <!-- Favicon --->
   <link href="<%= BASE_URL %>favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
@@ -61,9 +68,16 @@
   <link color="#009688" href="<%= BASE_URL %>safari-pinned-tab.svg" rel="mask-icon">
 </head>
 <body>
-<noscript>
-  <strong>We're sorry but Mod3D doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-</noscript>
 <div id="app"></div>
+<div id="preloader">
+  <noscript></noscript>
+
+  <div class="sk-folding-cube">
+    <div class="sk-cube1 sk-cube"></div>
+    <div class="sk-cube2 sk-cube"></div>
+    <div class="sk-cube4 sk-cube"></div>
+    <div class="sk-cube3 sk-cube"></div>
+  </div>
+</div>
 </body>
 </html>
